# SPIRV-LLVM-Translator

lib/SPIRV/: CMakeLists.txt  SPIRVReader.cpp  SPIRVWriter.cpp  VCExport.cpp  VCExport.h  VectorComputeUtil.h
lib/SPIRV/libSPIRV/: SPIRVEnum.h  SPIRVNameMapEnum.h  spirv.hpp
test/: CMakeLists.txt
tools/llvm-spirv/: CMakeLists.txt
